add a few divs for displaying moves and results

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title></title>
+  <title>Rock Paper Scissors</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello world
-  <script src="script.js"></script>
+  <h3> Choose Rock, Paper, or Scissors! </h3>
+  <button class="rock">Rock</button>
+  <button class="paper">Paper</button>
+  <button class="scissors">Scissors</button>
+  <div class="user-move"></div>
+  <div class="pc-move"></div>
+  <div class="win-counter"></div>
+  <div class="result"></div>
+  <script src="script.js" defer></script>
 
  <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
